# second-opinion-skill

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
extension/: background.js  manifest.json  popup.js
scripts/: build-release-binary.sh  refresh-binaries-from-release.sh
skills/second-opinion/: SKILL.md
skills/second-opinion/extension/: content-bridge.js  content-page.js  popup.html
skills/second-opinion/scripts/: build-release-binary.sh  second-opinion
src/: main.rs  server.rs
