[package]
name = "second-opinion"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "second-opinion"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
libc = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
